--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ concurrency:
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     steps:
       - name: Checkout
@@ -22,6 +23,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.22.x"
+          check-latest: true
 
       - name: Cache Go build & mod
         uses: actions/cache@v4
@@ -52,8 +54,17 @@ jobs:
 
       - name: Coverage (artifact)
         run: make cover && mv coverage.out coverage.txt
+
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
           name: coverage.txt
           path: coverage.txt
+
+      # ---- SonarCloud Scan (запустится, только если задан секрет SONAR_TOKEN) ----
+      - name: SonarCloud Scan
+        if: ${{ secrets.SONAR_TOKEN != '' }}
+        uses: sonarsource/sonarqube-scan-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: https://sonarcloud.io
