Clarify SonarCloud Scan comments in CI workflow
Updated comments for clarity regarding SonarCloud Scan.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,8 @@ jobs:
           name: coverage.txt
           path: coverage.txt
 
-      # SonarCloud Scan (пин на конкретный commit SHA v6)
+      # SonarCloud Scan (запустится, только если задан секрет SONAR_TOKEN)
+      # Пин на конкретный commit SHA (v6), чтобы убрать security hotspot
       - name: SonarCloud Scan
         if: ${{ env.SONAR_TOKEN != '' }}
         uses: sonarsource/sonarqube-scan-action@fd88b7d7ccbaefd23d8f36f73b59db7a3d246602
